# twps

./: README.rst  pyproject.toml
twps/: __init__.py  ppp.py  text_with_snippets.py  utils.py
