# setuptools_scm parts are from https://github.com/pypa/setuptools-scm


[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "twps"
authors = [ { name = "Anton Travleev", email = "anton.travleev@gmail.com" }, ]
description = "(T)ext (W)ith (P)ython (S)nippets preprocessor"
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = [
    ]


[project.urls]
Homepage = 'https://github.com/inr-kit/twps'

# Based on https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#creating-executable-scripts
[project.scripts]
twps = "twps:main"

[tool.setuptools_scm]
version_file = "twps/version.py"

[tool.setuptools]
py-modules = ["twps"]
